# rs-auth

./: Cargo.toml  README.md  docker-compose.yaml  privileges.yaml
auth-db/: mongo-init.js
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: main.rs  routes.rs
auth-service/src/handlers/: jwt_handler.rs  login.rs  mod.rs
frontend/: generate-react-cli.json  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/LoginFormComponent/: LoginFormComponent.lazy.tsx  LoginFormComponent.test.tsx  LoginFormComponent.tsx
frontend/src/pages/LoginPage/: LoginPage.test.tsx  LoginPage.tsx
privileges/: enum.ts
privileges-type-generator/: Cargo.toml
privileges-type-generator/src/: lib.rs  main.rs
privileges-type-generator/src/constants/: mod.rs  template_constants.rs
privileges-type-generator/src/generators/: generator_factory.rs  java_generator.rs  language.rs  mod.rs  rust_generator.rs  typescript_generator.rs
privileges-type-generator/src/privileges/: mod.rs
privileges-type-generator/src/structs/: mod.rs
privileges-type-generator/src/util/: file_util.rs  mod.rs  string_util.rs
privileges-type-generator/templates/: java.java.template  rust.rs.template  typescript.ts.template
src/: main.rs  routes.rs
src/handlers/: mod.rs
