[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-settings = "0.6.0"
actix-web = "4.3.1"
bcrypt = "0.15.0"
futures = "0.3"
jsonwebtoken = "8.3.0"
serde = "1.0.171"

[dependencies.mongodb]
version = "2.6.0"
default-features = true
features = ["tokio-runtime"]
